--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>ms-icon-310x310.png">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
-        <%= htmlWebpackPlugin.options.title %>
+        manag.io helpdesk
     </title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 </head>
